// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth login: renders correctly 1`] = `
<div
  className="card-form-body"
>
  <div
    className="container"
  >
    <div
      className="my-5"
      id="card-form-wrapper"
    >
      <div
        className="pt-4 pb-3"
        id="login-signup-div"
      >
        <Login
          changeForm={[Function]}
          dispatch={[Function]}
          isAuthenticated={false}
          location={
            Object {
              "pathname": "/login",
              "state": Object {
                "from": Object {
                  "pathname": "/",
                },
              },
            }
          }
          submitError={null}
          submitting={false}
          type="login"
          username={null}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Auth redirects when authenticated: login 1`] = `
<Redirect
  push={false}
  to={
    Object {
      "pathname": "/",
    }
  }
/>
`;

exports[`Auth redirects when authenticated: signup 1`] = `
<Redirect
  push={false}
  to={
    Object {
      "from": Object {
        "pathname": "/username",
      },
    }
  }
/>
`;

exports[`Auth redirects when authenticated: stateless location 1`] = `
<Redirect
  push={false}
  to={
    Object {
      "pathname": "/",
    }
  }
/>
`;

exports[`Auth signup: renders correctly 1`] = `
<div
  className="card-form-body signup-body"
>
  <div
    className="container"
  >
    <div
      className="my-5"
      id="card-form-wrapper"
    >
      <div
        className="pt-4 pb-3"
        id="login-signup-div"
      >
        <Signup
          changeForm={[Function]}
          dispatch={[Function]}
          isAuthenticated={false}
          location={
            Object {
              "pathname": "/signup",
              "state": Object {
                "from": Object {
                  "pathname": "/",
                },
              },
            }
          }
          submitError={null}
          submitting={false}
          type="signup"
          username={null}
        />
      </div>
    </div>
  </div>
</div>
`;
